[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visium_hd_functions"
version = "0.1.0"
description = "A collection of functions for Visium HD data processing"
readme = "README.md"
authors = [
    { name = "Selim Romero", email = "ssromerogon@tamu.edu" }
]
license = { text = "MIT" }
urls = { repository = "https://github.com/sromero1992/visium_hd_processing" }
keywords = [
    "Visium HD",
    "Nuclei segmentation",
    "Stardist",
    "Image recognition",
    "single-cell"
]
requires-python = ">=3.9, <3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "shapely",
    "scanpy",
    "geopandas",
]

[tool.setuptools]
packages = ["visium_hd_functions"]
package-dir = { "" = "visium_hd_functions" }
